// Vitest Snapshot v1

exports[`ProgressBar component > renders a progress bar using default props 1`] = `
<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    aria-valuetext="50%"
    class="c-rTKYu c-rTKYu-ixnjYu-theme-primary"
    data-max="100"
    data-state="loading"
    data-value="50"
    role="progressbar"
  >
    <div
      class="c-igejEK"
      data-max="100"
      data-state="loading"
      data-value="50"
      style="width: 100%; transform: translateX(-50%);"
    />
  </div>
</div>
`;

exports[`ProgressBar component > renders a solid progress bar 1`] = `
<div>
  <div
    appearance="solid"
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    aria-valuetext="50%"
    class="c-rTKYu c-rTKYu-ixnjYu-theme-primary"
    data-max="100"
    data-state="loading"
    data-value="50"
    role="progressbar"
  >
    <div
      class="c-igejEK"
      data-max="100"
      data-state="loading"
      data-value="50"
      style="width: 100%; transform: translateX(-50%);"
    />
  </div>
</div>
`;
